logs/git-gitlab.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GitPython-2.1.8.dist-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/git_gitlab-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/gitgitlab'...
Listing './lib/python3.5/site-packages/gitgitlab/bin'...
Compiling './lib/python3.5/site-packages/gitgitlab/bin/__init__.py'...
***   File "./lib/python3.5/site-packages/gitgitlab/bin/__init__.py", line 31
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gitgitlab/test'...
Compiling './lib/python3.5/site-packages/gitgitlab/test/gitgitlab_test.py'...
***   File "./lib/python3.5/site-packages/gitgitlab/test/gitgitlab_test.py", line 45
    print "Get repo name from remote settings"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/libsaas'...
Listing './lib/python3.5/site-packages/libsaas/executors'...
Listing './lib/python3.5/site-packages/libsaas/filters'...
Listing './lib/python3.5/site-packages/libsaas/scripts'...
Listing './lib/python3.5/site-packages/libsaas/services'...
Listing './lib/python3.5/site-packages/libsaas/services/basecamp'...
Listing './lib/python3.5/site-packages/libsaas/services/bitbucket'...
Listing './lib/python3.5/site-packages/libsaas/services/bitly'...
Listing './lib/python3.5/site-packages/libsaas/services/cartodb'...
Listing './lib/python3.5/site-packages/libsaas/services/compete'...
Listing './lib/python3.5/site-packages/libsaas/services/desk'...
Listing './lib/python3.5/site-packages/libsaas/services/ducksboard'...
Listing './lib/python3.5/site-packages/libsaas/services/flurry'...
Listing './lib/python3.5/site-packages/libsaas/services/fullcontact'...
Listing './lib/python3.5/site-packages/libsaas/services/github'...
Listing './lib/python3.5/site-packages/libsaas/services/googleanalytics'...
Listing './lib/python3.5/site-packages/libsaas/services/googlecalendar'...
Listing './lib/python3.5/site-packages/libsaas/services/googleoauth2'...
Listing './lib/python3.5/site-packages/libsaas/services/googlespreadsheets'...
Listing './lib/python3.5/site-packages/libsaas/services/instagram'...
Listing './lib/python3.5/site-packages/libsaas/services/intercom'...
Listing './lib/python3.5/site-packages/libsaas/services/mailchimp'...
Listing './lib/python3.5/site-packages/libsaas/services/mixpanel'...
Listing './lib/python3.5/site-packages/libsaas/services/mixrank'...
Listing './lib/python3.5/site-packages/libsaas/services/mozscape'...
Listing './lib/python3.5/site-packages/libsaas/services/pingdom'...
Listing './lib/python3.5/site-packages/libsaas/services/pipedrive'...
Listing './lib/python3.5/site-packages/libsaas/services/recurly'...
Listing './lib/python3.5/site-packages/libsaas/services/spotify'...
Listing './lib/python3.5/site-packages/libsaas/services/stripe'...
Listing './lib/python3.5/site-packages/libsaas/services/trello'...
Listing './lib/python3.5/site-packages/libsaas/services/twilio'...
Listing './lib/python3.5/site-packages/libsaas/services/uservoice'...
Listing './lib/python3.5/site-packages/libsaas/services/youtube'...
Listing './lib/python3.5/site-packages/libsaas/services/zendesk'...
Listing './lib/python3.5/site-packages/libsaas-0.4.egg-info'...
Listing './lib/python3.5/site-packages/libsaas_gitlab'...
Listing './lib/python3.5/site-packages/libsaas_gitlab-0.3.0.dev0.egg-info'...
Listing './lib/python3.5/site-packages/opster-4.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './share'...
Listing './share/python-wheels'...
